# OnnxRuntimeAndorid

./: .gitattributes  README.md  build.gradle  settings.gradle
apk/: app-debug.apk
app/: CMakeLists.txt  build.gradle
app/libs/: onnxruntime-release.aar
app/src/androidTest/java/com/play/onnxruntime/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: imageresizer.h  logs.h  native-lib.cpp  onnxruntime_inference.cpp  onnxruntime_inference.h  postprocess.h  preprocess.h  utils.h
app/src/main/java/com/play/onnxruntime/: ImageClassifier.java  Inference.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/play/onnxruntime/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
